<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GBD</string>
    <string name="game_board">Game Board</string>

    <!-- Main menu -->
    <string name="action_settings">Settings</string>
    <string name="action_add_game">Add Game</string>
    <string name="action_change_view">Change view mode</string>

    <!-- OnClickMenu -->
    <string name="action_play_game">Play Game</string>
    <string name="action_edit_game">Edit Game</string>
    <string name="action_delete_game">Delete Game</string>
    <string name="title_activity_game_detail">GameDetail</string>
    <string name="Game_Detail_Title">Titulo - (Obligatorio)</string>
    <string name="Game_Detail_Help">¿Como jugar?</string>
    <string name="Game_Detail_Title_Hint">Introduzca el título</string>
    <string name="Game_Detail_Help_Hint">¿En que consiste el juego?</string>
    <string name="Game_Detail_Tablero">Añadir tablero - (Obligatorio)</string>
    <string name="Game_Detail_GalleryAcces">Acceder a la galería.</string>
    <string name="Game_Detail_CameraAcces">Acceder a la cámara.</string>
    <string name="Game_Detail_ImagePreview">Vista previa.</string>
    <string name="Game_Detail_GalleryAccesDescripcion">Añadir tablero desde galería.</string>
    <string name="Game_Detail_CameraAccesDescripcion">Añadir tablero desde cámara.</string>
    <string name="Game_Detail_Dados">Añadir</string>
    <string name="Game_Detail_Fichas">Añadir fichas - (Obligatorio)</string>
    <string name="Game_Detail_AddDice">Añadir dados - (Obligatorio)</string>
    <string name="Game_Detail_ModifyDice">Modificar</string>
    <string name="Game_Detail_AddChip">Añadir</string>
    <string name="Game_Detail_ModifyChip">Modificar</string>
    <string name="tvNumeroDices">Número de dados</string>
    <string name="tvTipoDices">Tipo de dados</string>
    <string name="ibNewDice">Tipo dado</string>
    <string name="tvNumeroChips">Número de fichas </string>
    <string name="tvTipoChips">Forma </string>
    <string name="ibNewChip">Tipo ficha</string>
    <string name="tvColor">Color</string>
    <string name="tvSize">Tamaño</string>
    <string name="tvAddDices">Añadir dados</string>
    <string name="tvAddChips">Añadir fichas</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="TituloSeleccionaColor">Selecciona un color</string>
    <string name="tvCurrentColorDialog">Color actual:</string>
    <string name="tvCurrentFormaDialog">Forma actual:</string>
    <string name="tvCurrentDiceDialog">Forma actual:</string>
    <string name="TituloSeleccionaForma">Selecciona una forma</string>
    <string name="imgItemDeleteText">Eliminar</string>
    <string name="TituloSeleccionaFicha">Elimina una ficha</string>
    <string name="ColorBLACKDescription">Negro</string>
    <string name="ColorDKGRAYDescription">Gris oscuro</string>
    <string name="ColorGRAYDescription">Gris</string>
    <string name="ColorLTGRAYDescription">Gris claro</string>
    <string name="ColorBLUEDescription">Azul</string>
    <string name="ColorCYANDescription">Cian</string>
    <string name="ColorGREENDescription">Verde</string>
    <string name="ColorREDDescription">Rojo</string>
    <string name="ColorMAGENTADescription">Magenta</string>
    <string name="ColorYELLOWDescription">Amarillo</string>
    <string name="ShapeCircleDescription">Circulo</string>
    <string name="ShapeSquareDescription">Cuadrado</string>
    <string name="SizeDescription">Tamaño</string>
    <string name="DiceDescription">Dado</string>
    <string name="DiceStandardDescription">standard</string>
    <string name="DiceTetraedroDescription">tetraedro</string>
    <string name="DiceHexaedroDescription">hexaedro</string>
    <string name="DiceOctaedroDescription">octaedro</string>
    <string name="GameDetailSaveGame">Guardar</string>
    
    
    <string-array name="number_dices_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="title_activity_browse_picture">BrowsePicture</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_color_picker">ColorPickerActivity</string>
    
    <string name="Validations">Debes completar los datos obligatorios.</string>
    <string name="WarningTitle">Atención.</string>

</resources>