<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:orientation="vertical"
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_marginTop="20dp"
	    android:layout_marginBottom="20dp"
	    android:id="@+id/lyTablero">
	
    <TextView
        android:id="@+id/tvAddTablero"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Game_Detail_Tablero" 
        android:textSize="22sp"
        android:textStyle="bold"/>
    
	<View
        android:id="@+id/vwAddTablero"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@android:color/black" />
    
    <RelativeLayout 
        android:background="@android:color/white" 
        android:layout_width="250dp"
	 	android:layout_height="wrap_content"
	 	android:layout_marginLeft="10dp"
	 	android:layout_marginRight="10dp"
	 	android:layout_marginTop="10dp"
	 	android:layout_marginBottom="10dp"
	 	android:id="@+id/rlGaleria"
	 	android:clickable="true"
		android:onClick="addBoardFromGallery">
        <ImageView
	      	  android:id="@+id/ibGallery"
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:layout_alignParentLeft="true"
		      android:contentDescription="@string/Game_Detail_GalleryAcces"
		      android:src="@drawable/picture" />
  		<TextView
		      android:id="@+id/tvDescripcionGaleria"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:layout_centerInParent="true"
		      android:layout_marginRight="5dp"
		      android:text="@string/Game_Detail_GalleryAccesDescripcion" 
		      android:textSize="14sp"
		      android:gravity="right"
		      android:textStyle="bold"/>
    </RelativeLayout>
        
    <RelativeLayout 
            android:background="@android:color/white" 
            android:layout_width="250dp"
	    	android:layout_height="wrap_content"
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginRight="10dp"
	    	android:layout_marginTop="10dp"
	    	android:layout_marginBottom="10dp"
	    	android:id="@+id/rlCamera"
	    	android:clickable="true"
 			android:onClick="addBoardFromCamera">
            <ImageView
		        android:id="@+id/ibCamera"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:contentDescription="@string/Game_Detail_CameraAcces"
		        android:src="@drawable/camera" />
		    <TextView
		        android:id="@+id/tvDescripcionCamara"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_centerInParent="true"
		        android:layout_marginRight="5dp"
		        android:text="@string/Game_Detail_CameraAccesDescripcion" 
		        android:textSize="14sp"
     		   	android:gravity="right"
		        android:textStyle="bold"/>
    </RelativeLayout>
    
    <ImageView
		        android:id="@+id/ibPreview"
		        android:layout_width="300dp"
		        android:layout_height="300dp"
		        android:layout_gravity="center_horizontal"
		        android:src="@android:color/darker_gray" 
		        android:contentDescription="@string/Game_Detail_ImagePreview" />
        
    </LinearLayout>
    
    
    
    