<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
  	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E5E5E5" >

	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".GameDetail" 
	    android:descendantFocusability="beforeDescendants"
	    android:focusableInTouchMode="true">
	
	    <TextView
	        android:id="@+id/tvTitulo"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/Game_Detail_Title" 
	        android:textSize="22sp"
	        android:textStyle="bold"/>
	
	    <View
	        android:id="@+id/vwLineaTitulo"
	        android:layout_width="fill_parent"
	        android:layout_height="2dp"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/tvTitulo"
	        android:background="@android:color/black" />
	    
	    <EditText
	        android:id="@+id/edTitulo"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/vwLineaTitulo"
	        android:ems="10" 
	        android:inputType="text"
	        android:layout_marginTop="20dp"
	        android:hint="@string/Game_Detail_Title_Hint"
	        android:background="@android:color/white">
	    </EditText>
	
	    <TextView
	        android:id="@+id/tvComoJugar"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/edTitulo"
	        android:text="@string/Game_Detail_Help" 
	        android:textSize="22sp"
	        android:layout_marginTop="20dp"
	        android:textStyle="bold"/>
	
	    <View
	        android:id="@+id/vwLineaComoJugar"
	        android:layout_width="fill_parent"
	        android:layout_height="2dp"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/tvComoJugar"
	        android:background="@android:color/black" />
	    
	    <EditText
	        android:id="@+id/edDescripcion"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/vwLineaComoJugar"
	        android:ems="10"
	        android:inputType="textMultiLine" 
	        android:lines="5"
	        android:layout_marginTop="20dp"
	        android:hint="@string/Game_Detail_Help_Hint"
	        android:maxLength="250"
	        android:background="@android:color/white">
	    </EditText>
	
	    <fragment
	        android:id="@+id/FrgTablero"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        class="cat.montoya.gbd.FragmentTablero"
	        android:layout_below="@+id/edDescripcion"
	        tools:layout="@layout/fragment_tablero" />
	    
	    <TextView
	        android:id="@+id/tvAddDados"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/FrgTablero"
	        android:text="@string/Game_Detail_AddDice" 
	        android:textSize="22sp"
	        android:layout_marginTop="20dp"
	        android:textStyle="bold"/>
	
	    <View
	        android:id="@+id/vwAddDados"
	        android:layout_width="fill_parent"
	        android:layout_height="2dp"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/tvAddDados"
	        android:background="@android:color/black" />
	    
	    <LinearLayout 
	    	android:orientation="horizontal"
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="20dp"
		    android:layout_marginBottom="20dp"
		    android:layout_below="@+id/vwAddDados"
		    android:id="@+id/lyAddDices">
		
	        <Spinner
	            android:id="@+id/numer_dices"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:gravity="center"/>
	           
	        <ImageView
			        android:id="@+id/ibNewDice"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp"
		            android:background="@android:drawable/btn_default" 
			    	android:clickable="true"
			    	android:focusable="true"
			        android:src="@drawable/dice1"
			        android:onClick="SelectDice"
			        android:contentDescription="@string/ibNewDice" />
	 

				 <RelativeLayout 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@android:drawable/btn_default" 
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/ibAddDice"
					android:onClick="AddDice">
					<ImageView
						  android:id="@+id/ivAddDice"
						  android:layout_width="wrap_content"
						  android:layout_height="wrap_content"
						  android:layout_alignParentLeft="true"
						  android:contentDescription="@string/Game_Detail_Dados"
						  android:src="@drawable/add" />
					<TextView
						  android:id="@+id/tvAddDice"
						  android:layout_width="wrap_content"
						  android:layout_height="wrap_content"
						  android:layout_toRightOf="@+id/ivAddDice"
						  android:layout_marginRight="5dp"
						  android:layout_marginLeft="5dp"
						  android:layout_centerVertical="true"
						  android:text="@string/Game_Detail_Dados" 
						  android:textSize="14sp"
						  android:gravity="right"
						  android:textStyle="bold"/>
				</RelativeLayout>

				<RelativeLayout 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@android:drawable/btn_default" 
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/ibModifyDice"
					android:onClick="ModifyDices">
					<ImageView
						  android:id="@+id/ivModifyDice"
						  android:layout_width="wrap_content"
						  android:layout_height="wrap_content"
						  android:layout_alignParentLeft="true"
						  android:contentDescription="@string/Game_Detail_ModifyDice"
						  android:src="@drawable/remove" />
					<TextView
						  android:id="@+id/tvModify"
						  android:layout_width="wrap_content"
						  android:layout_height="wrap_content"
						  android:layout_toRightOf="@+id/ivModifyDice"
						  android:layout_marginRight="5dp"
						  android:layout_marginLeft="5dp"
						  android:layout_centerVertical="true"
						  android:text="@string/Game_Detail_ModifyDice" 
						  android:textSize="14sp"
						  android:gravity="right"
						  android:textStyle="bold"/>
				</RelativeLayout>
	        
		</LinearLayout>
		
		<TextView
		     android:id="@+id/tvAddChips"
		     android:layout_width="fill_parent"
		     android:layout_height="wrap_content"
		     android:layout_below="@+id/lyAddDices"
		     android:text="@string/Game_Detail_Fichas" 
		     android:textSize="22sp"
		     android:layout_marginTop="20dp"
		     android:textStyle="bold"/>
		
		 <View
		     android:id="@+id/vwAddChips"
		     android:layout_width="fill_parent"
		     android:layout_height="2dp"
		     android:layout_alignParentLeft="true"
		     android:layout_below="@+id/tvAddChips"
		     android:background="@android:color/black" />
	  	
		  <LinearLayout 
	    	android:orientation="horizontal"
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="20dp"
		    android:layout_marginBottom="20dp"
		    android:layout_below="@+id/vwAddChips"
		    android:id="@+id/lyAddChips">
	         
		      <Spinner
			    android:id="@+id/numer_chips"
			    android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_gravity="center" />
		            
	       	 <ImageView
				android:id="@+id/ibNewChip"
				android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_gravity="center"
		        android:src="@drawable/circulo"
		        android:contentDescription="@string/ibNewChip" />
		             
            <RelativeLayout 
     			android:id="@+id/rlColor"
     			android:layout_width="30dp" 
     			android:layout_height="30dp"
     			android:layout_marginLeft="10dp"
        		android:layout_marginRight="10dp"
     			android:layout_gravity="center"
     			android:background="@android:color/black">
  			</RelativeLayout>
	  			
            <Spinner
			    android:id="@+id/number_size"
			    android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_gravity="center" />
		            
		  	
		  	<RelativeLayout 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@android:drawable/btn_default" 
				android:clickable="true"
				android:focusable="true"
				android:id="@+id/ibAddChip"
				android:onClick="AddChip">
				<ImageView
					  android:id="@+id/ivAddChip"
					  android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
					  android:layout_alignParentLeft="true"
					  android:contentDescription="@string/Game_Detail_AddChip"
					  android:src="@drawable/add" />
				<TextView
					  android:id="@+id/tvAddChip"
					  android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
					  android:layout_toRightOf="@+id/ivAddChip"
					  android:layout_marginRight="5dp"
					  android:layout_marginLeft="5dp"
					  android:layout_centerVertical="true"
					  android:text="@string/Game_Detail_AddChip" 
					  android:textSize="14sp"
					  android:gravity="right"
					  android:textStyle="bold"/>
			</RelativeLayout>
		  	
 			  <RelativeLayout 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@android:drawable/btn_default" 
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/ibModifyChip"
					android:onClick="SelectChip">
					<ImageView
						  android:id="@+id/ivModifyChip"
						  android:layout_width="wrap_content"
						  android:layout_height="wrap_content"
						  android:layout_alignParentLeft="true"
						  android:contentDescription="@string/Game_Detail_ModifyChip"
						  android:src="@drawable/remove" />
					<TextView
						  android:id="@+id/tvModifyChip"
						  android:layout_width="wrap_content"
						  android:layout_height="wrap_content"
						  android:layout_toRightOf="@+id/ivModifyChip"
						  android:layout_marginRight="5dp"
						  android:layout_marginLeft="5dp"
						  android:layout_centerVertical="true"
						  android:text="@string/Game_Detail_ModifyChip" 
						  android:textSize="14sp"
						  android:gravity="right"
						  android:textStyle="bold"/>
				</RelativeLayout>
		 </LinearLayout>

		  <RelativeLayout 
		        android:layout_width="wrap_content"
			 	android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:layout_centerHorizontal="true"
				android:layout_below="@+id/lyAddChips"
			    android:background="@android:drawable/btn_default" 
			    android:clickable="true"
			    android:focusable="true"
			 	android:id="@+id/btn_savegame"
				android:onClick="saveGame">
		        <ImageView
			      	  android:id="@+id/ibSaveGame"
				      android:layout_width="wrap_content"
				      android:layout_height="wrap_content"
				      android:layout_alignParentLeft="true"
				      android:contentDescription="@string/GameDetailSaveGame"
				      android:src="@drawable/save" />
		  		<TextView
				      android:id="@+id/tvDescripcionButtonSaveGame"
				      android:layout_width="wrap_content"
				      android:layout_height="wrap_content"
				      android:layout_toRightOf="@+id/ibSaveGame"
					  android:layout_marginLeft="5dp"
					  android:layout_centerVertical="true"
				      android:text="@string/GameDetailSaveGame" 
				      android:textSize="14sp"
				      android:gravity="right"
				      android:textStyle="bold"/>
		    </RelativeLayout>

	</RelativeLayout>
</ScrollView>
